revised course 2 responses.

--- a/Activity_Course 2 Waze project lab.ipynb
+++ b/Activity_Course 2 Waze project lab.ipynb
@@ -132,7 +132,8 @@
     "id": "irvqnKSe6Z80"
    },
    "source": [
-    "==> ENTER YOUR RESPONSE HERE"
+    "==> ENTER YOUR RESPONSE HERE  \n",
+    "Prepare by reading in the data and exploring dataset to identify key columns for the goal."
    ]
   },
   {
@@ -522,9 +523,9 @@
    },
    "source": [
     "==> ENTER YOUR RESPONSES TO QUESTIONS 1-3 HERE\n",
-    "No missing values seen using head()\n",
-    "14,999 rows and 13 columns.\n",
-    "info() shows that 'label' column has 700 missing values."
+    "- No missing values seen using `head()`\n",
+    "- 14,999 rows and 13 columns.\n",
+    "- `info()` shows that 'label' column has 700 missing values."
    ]
   },
   {
@@ -974,8 +975,9 @@
     "id": "sJpXfBZUlWC5"
    },
    "source": [
-    "==> ENTER YOUR RESPONSE HERE\n",
-    "Nothing conspicuous seen."
+    "==> ENTER YOUR RESPONSE HERE  \n",
+    "Comparing summary statistics of data with missing retention vairables (null_df) with those without missing ones reveals nothing significant.  \n",
+    "The means and standard deviations are quite close."
    ]
   },
   {
@@ -1024,9 +1026,9 @@
     "id": "JKfLfQQUltQk"
    },
    "source": [
-    "==> ENTER YOUR RESPONSE HERE\n",
-    "iPhone users with null values: 447\n",
-    "Android users with null values: 253"
+    "==> ENTER YOUR RESPONSE HERE  \n",
+    "- iPhone users with null values: 447   \n",
+    "- Android users with null values: 253 "
    ]
   },
   {
